# SpellAccuracy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: hooks.h  logging.h
src/: hooks.cpp  logging.cpp  pch.cpp  plugin.cpp
